<resources>
    <string name="app_name">Cotação do Dolar</string>


    <string name="ok">OK</string>
    <string name="about_dialog_title">Informações</string>

    <string name="about_dialog_text">
    <![CDATA[
<b>Cotação de moeda</b>
<br>
Versao %s
<br>
<b>Desenvolvido por</b>
<br>
Jesuino Carvalho Júnior
<br>
<b>Email</b>
<br>
juniorsnakee@gmail.com
<br>
<b>Copyright © 2018</b>
<br>
Todos os diretos reservados
<br>
https://economia.awesomeapi.com.br
<br>
Dados atualizado a cada 10 minutos
]]>
    </string>


    <string name="USD_BRL">Dólar Comercial</string>
    <string name="USD_BRLT">Dólar Turismo</string>
    <string name="CAD_BR">Dólar Canadense</string>
    <string name="EUR_BRL">Euro</string>
    <string name="GBP_BRL">Libra Esterlina</string>
    <string name="ARS_BRL">Peso Argentino</string>
    <string name="BTC_BRL">Bitcoin</string>


    <string name="qdade_registro">Últimos resultados</string>
    <string-array name="qdade_registro">
        <item>1</item>
        <item>5</item>
        <item>10</item>
        <item>15</item>
        <item>20</item>
        <item>25</item>
        <item>30</item>
        <item>50</item>
        <item>60</item>
        <item>75</item>
        <item>100</item>
    </string-array>


</resources>
