<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#5d4037"
    tools:context=".MainActivity">


    <TextView
        android:id="@+id/txtTitulo2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="137dp"
        android:text="Exibir últimas cotações"
        android:textColor="@color/white"
        android:textStyle="bold" />

    <RadioGroup
        android:id="@+id/radioGrupo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="67dp"
        android:background="#795548"
        android:text="RadioButton">

        <RadioButton
            android:id="@+id/rDolarComercial"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/USD_BRL" />

        <RadioButton
            android:id="@+id/rDolarTurismo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/USD_BRLT" />

        <RadioButton
            android:id="@+id/rDolarCanadense"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/CAD_BR" />

        <RadioButton
            android:id="@+id/rEuro"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/EUR_BRL" />

        <RadioButton
            android:id="@+id/rLibraEsterlina"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/GBP_BRL" />

        <RadioButton
            android:id="@+id/rPesoArgentino"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ARS_BRL" />

        <RadioButton
            android:id="@+id/rBitcoin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/BTC_BRL" />

    </RadioGroup>

    <Spinner
        android:id="@+id/spinnerResultados"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="101dp"
        android:background="#795548"
        android:entries="@array/qdade_registro"
        android:prompt="@string/qdade_registro" />

    <Button
        android:id="@+id/btnOk"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="11dp"
        android:text="Ok" />

    <TextView
        android:id="@+id/txtTitulo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="33dp"
        android:text="Selecione uma moeda para cotação"
        android:textColor="@android:color/white"
        android:textStyle="bold" />

</RelativeLayout>